--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,11 @@
 HW1/HW1_new_solution.ipynb
 HW2/HW2_sol.ipynb
 #HW2/*
-HW4/*
+#HW4/*
+HW4_old/*
+HW4_sol/*
+HW4_sol_old/*
+data/*
+results/*
+checkpoints/*
+new/*
